Edit P1C1 assignment statement concept.

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
@@ -36,7 +36,7 @@ export const sliderImagesAssignInt = [
     tipStart: 1,
     listType: "ol",
     tips: [
-      "The program is loaded into memory and the program counter is set to instruction 1"
+      "The program is loaded into memory and the program counter is set to instruction 1."
     ]
   },
   {
@@ -266,24 +266,51 @@ The assignment statement is an **instruction** that stores a value in a [variabl
 
 The assignment statement performs two actions. First, it calculates the value of the [expression](../04-expression) (calculation) on the right-hand side of the assignment operator (the `=`). Once it has the value, it stores the value (assigns it) to the variable on the left-hand side of the assignment operator.
 
-## Assignment statement up close
+## Assignment Statement -- why, when, and how
 
-The following sliders show how the assignment statement works in detail.
-These are both relatively simple programs, but notice how much is going on behind the scenes!
+When you create a variable, you have identified a piece of information that you want to be able to change as your program runs.
+Whenever you need to give a variable an initial or new value, you use an **assignment statement**.
 
-### Assigning an int division result to an int variable
+The assignment statement uses the **assignment operator** `=`.
+Whatever is on the right-hand side of `=` represents the value to be assigned.
+This could be a [literal](../05-literal), a [method call](../03-method-call), or any other [expression](../04-expression).
+On the left-hand side you write the identifier of the variable you want to store this value in.
 
-<MySwiper client:only height="" images={sliderImagesAssignInt}></MySwiper>
+For example, you might decide to ask the user for their name.
+First, you need a variable to store the value.
+You might decide to call this variable `name`.
+Then, the assignment statement lets you read a response from the user and store it in that variable.
+In this case, the **right-hand side** of the assignment would be a call to `ReadLine`, which reads input from [standard in](../../../../part-0-getting-started/2-computer-use/1-concepts/07-streams/#standard-input-stdin) and returns it to you.
+The **left-hand side** would be the identifier of our variable, `name`.
 
-### Assigning an int division result to a double variable
+It is important to remember that every assignment statement has **2 actions**:
 
-<MySwiper client:only height="" images={sliderImagesAssignDouble}></MySwiper>
+1. Calculate the value on the right-hand side
+2. Store it in the variable on the left-hand side.
 
-## Assignment Statement - why, when, and how
+The ordering of these actions allow you to update the value of a variable using an expression involving the variable being updated. This can be very useful. For example, you might want to update the value of a variable storing the number of steps you have taken today.
 
-When you create a variable, you have identified a value that you want to be able to change as the program runs. The **assignment statement** lets you store a value in the variable. When designing your program, you can use the assignment statement to store updated values for your variables as they change.
+## In C#
 
-For example, you can decide to ask the user for their name. You need a variable to store the value, and the assignment statement lets you read a response from the user and store the result in a variable. In this case, the **right-hand side** of the assignment would be a call to `ReadLine`, which reads input from standard in and returns it to you. In this case, the assignment statement would allow you to store that value in a `name` variable, for example, which you can use later whenever you want to refer to the user's name.
+:::tip[Syntax]
+![The C# syntax for an assignment statement](./images/assignment-statement.png "The syntax for an assignment statement")
+<div class="caption">The C# syntax for an assignment statement</div><br/>
+:::
+
+In C# the assignment operator is `=`.
+Most assignment statements are written using `=`, with an identifier on the left-hand side and an [expression](../04-expression) on the right-hand side.
+The assignment operator can optionally be modified with `+`, `-`, `*`, or `/`, which are shorthands for adding to, subtracting from, multiplying, and dividing the variable identified on the left-hand side of the statement.
+
+Some assignment statements are written without `=`.
+These are assignment statements using increment (`++`) or decrement (`--`), which allow you to add or remove one from a variable's current value.
+
+For example, `x = x - 1`, `x -= 1`, and `x--` are all assignment statements which do the same thing -- assign the variable `x` a new value that is one lower than its current value.
+
+## Examples
+
+### Basic assignment statement
+
+In this example we use `ReadLine` to get input from the user and store it in a `name` variable.
 
 ```csharp
 using static System.Console;
@@ -298,17 +325,14 @@ Write("Enter your name: ");
 // name is the left-hand side - where to store the value
 // |
 // |    ReadLine() is the right-hand side. It is called
-// |      |        to get the value to assign to name
+// |      |        to get a value to assign to name
 // v      v
 name = ReadLine();
 ```
 
-It is important to remember this has **2 actions**:
+### Shorthand assignment statements
 
-1. Calculate the value on the right-hand side
-2. Store it in the variable on the left-hand side.
-
-This means you can update the value of a variable. For example:
+The following code shows an example of how to use some of the shorthand assignment statements.
 
 ```csharp
 using static System.Convert;
@@ -322,7 +346,7 @@ Write("What is the start count: ");
 // Read in a line from the user
 line = ReadLine();
 
-// Initialise the count to a user provided value.
+// Initialise the count to a user-provided value.
 count = ToInt32(line);
 
 WriteLine($"Count is {count}");
@@ -331,48 +355,47 @@ WriteLine($"Count is {count}");
 //
 // count is the left-hand side - where to store the value
 // |
-// |    count + 1 is calculated first...
+// |    count + 1 is calculated first
 // |      |
 // v      v
 count = count + 1;
 
-WriteLine($"After count = count + 1... count is now {count}");
+WriteLine($"After count = count + 1...count is now {count}");
 
 // We can use shorthand to do this too
 //
 // count is the left-hand side - where to store the value
 // |
-// |  This means... count = count + 5
+// |  This is the same as count = count + 5
 // |  |
 // v  v
 count += 5;
 
-WriteLine($"After count += 5... count is now {count}");
+WriteLine($"After count += 5...count is now {count}");
 
 // We can make this shorter for + 1
 //
 // count is the left-hand side - where to store the value
 // |
-// | This means... count = count + 1
+// | This is the same as count = count + 1
 // | |
 // v v
 count++;
 
-WriteLine($"After count += 5... count is now {count}");
-
+WriteLine($"After count += 5...count is now {count}");
 ```
 
-The following shows the output if you run this at the Terminal and enter **17** as the start count. The different shorthand assignments aim to help you with the common operations of updating a variable based on its current value. The example shows the use of `+=` and `++` and there are the equivalent versions for subtraction (`-=` and `--`) and for multiplication and division (`*=` and `\=`).
+If you ran the above code and entered **17** as the start count you should get this output:
 
 ```bash
 What is the start count: 17
 Count is 17
-After count = count + 1 ... count is now 18
-After count += 5 ... count is now 23
-After count++    ... count is now 24
+After count = count + 1...count is now 18
+After count += 5...count is now 23
+After count++...count is now 24
 ```
 
-You do not always need to store values in variables. Sometimes you can just use the value and then forget it. For example, in the above code, we read the initial count from the user. This requires us to read it as text, and then convert that text to a number. Given then we do not ever use the details in `line` again, we do not need to create this variable in the first place. Instead, we could pass the value to the convert function directly as shown below.
+You do not always need to store values in variables. Sometimes you can just use the value and then forget it. For example, in the above code, we read the initial count from the user. This requires us to read it as text, and then convert that text to a number. Given that we do not ever use the details in `line` again, we do not need to create this variable in the first place. Instead, we could pass the value to the convert function directly as shown below.
 
 ```csharp
 using static System.Convert;
@@ -393,64 +416,18 @@ count = ToInt32(ReadLine());
 //... the rest of the code would be the same
 ```
 
-## In C#
+## Assignment statement up close
 
-:::tip[Syntax]
+The following sliders show how the assignment statement works in detail.
+These are both relatively simple programs, but notice how much is going on behind the scenes!
 
-- The C# syntax for an assignment statement is shown in [Figure 5.x](#FigureAssignmentStatementSyntax) below
-- In C# assignment is indicated by the equals sign ( = ).
-- The left-hand side of the assignment must be a valid variable, this is where the value is to be stored.
-- The right-hand side of the assignment is an expression. It calculates the value that will be stored in the variable.
-- There are multiple versions of the assignment, giving short-hand ways of using the current value.
-  - `=` is the standard assignment, this stores the value of the expression in the Variable.
-  - `+=` increments the variable’s value, where `a += n;` is equivalent to `a = a + n`
-  - `-=` decrements the variable’s value, where `a -= n;` is equivalent to `a = a - n`
-  - `*=` multiplies the value in the variable by a given factor, where `a *= n;` is equivalent to `a = a * n`
-  - `/=` divides the value in the variable by a factor, where `a /= n;` is equivalent to `a = a / n`
-- The `++` and `--` operators allow you to add or remove one from a variable's current value.
+### Assigning an int division result to an int variable
 
+<MySwiper client:only height="" images={sliderImagesAssignInt}></MySwiper>
 
-<a id="FigureAssignmentStatementSyntax"></a>
+### Assigning an int division result to a double variable
 
-![Figure 5.x The syntax for an assignment statement](./images/assignment-statement.png "The syntax for an assignment statement")
-<div class="caption"><span class="caption-figure-nbr">Figure 5.x: </span>The syntax for an assignment statement</div><br/>
-
-:::
-
-## Examples
-
-See [Listing 5.x](#ListingAssignmentStatement) below for an example assignment statements.
-
-<a id="ListingAssignmentStatement"></a>
-
-```csharp
-#include "splashkit.h"
-/* Program: assignment_tests.cs 
- * Demonstrates assignment to a variable
- */
-
-int my_data = 10, days_in_month, days_remaining;
-
-WriteLine($"my_data_is {my_data}");
-
-my_data = my_data + 1; // add 1 to my_data and store in my_data
-WriteLine($"my_data_is {my_data}");
-
-my_data++; // add 1 to my_data and store in my_data
-WriteLine($"my_data_is {my_data}");
-
-my_data *= 2; // double my_data and store in my_data
-WriteLine($"my_data_is {my_data}");
-
-days_in_month = 365 / 12; // assign days_in_month a calculated value
-WriteLine($"On average there are {days_in_month} days in a month.");
-
-// assign days_remaining a calculated value
-days_remaining = 365 - days_in_month * 12;
-WriteLine($"The remaining {days_remaining} days are distributed to a few months");
-```
-
-<div class="caption"><span class="caption-figure-nbr">Listing 5.x: </span>Assignment Tests</div>
+<MySwiper client:only height="" images={sliderImagesAssignDouble}></MySwiper>
 
 ## Activities
 
@@ -459,10 +436,10 @@ WriteLine($"The remaining {days_remaining} days are distributed to a few months"
 :::note[Summary]
 
 - An assignment statement is an **instruction** you can get the computer to perform.
-- The _right-hand side_ of the assignment is used to calculate the value to be stored.
-- The _left-hand side_ of the assignment is a **[variable](../12-variable)** into which the value is stored.
+- The assignment statement uses an **assignment operator**.
+- The right-hand side of the assignment operator is an [expression](../04-expression) representing the value to be stored.
+- The left-hand side of the assignment operator is the [variable](../07-variable) into which the value is stored.
 - When the assignment statement is executed the expression is evaluated first, and then the resulting value is stored in the variable.
-- It's important to remember that the variable is a location to store a value.
-- When the variable appears on the left-hand side of an assignment it is used to store the resulting value. If the variable appears on the right-hand side its value is being used as part of the calculation.
+- The variable on the left-hand side of the assignment operator can be used as part of the expression on the right-hand side.
 
 :::
