Remove number labels that were missed. Fix headings for consistency.

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
@@ -266,7 +266,7 @@ The assignment statement is an **instruction** that stores a value in a [variabl
 
 The assignment statement performs two actions. First, it calculates the value of the [expression](../04-expression) (calculation) on the right-hand side of the assignment operator (the `=`). Once it has the value, it stores the value (assigns it) to the variable on the left-hand side of the assignment operator.
 
-## Assignment Statement -- why, when, and how
+## Assignment Statement -- when, why, and how
 
 When you create a variable, you have identified a piece of information that you want to be able to change as your program runs.
 Whenever you need to give a variable an initial or new value, you use an **assignment statement**.
