--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/01-sequence.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/01-sequence.mdx
@@ -84,7 +84,7 @@ The computer's processor maintains a **program counter** that is used to keep tr
 
 Keeping this simple idea in mind will be important throughout your programming journey and beyond. The computer is unintelligent and will follow the sequence of actions that you define. It will not interpret, adapt, or otherwise deviate from what you tell it to do.
 
-## Sequence -- why, when, and how
+## Sequence -- when, why, and how
 
 Designing a program will require you to be able to identify a sequence of instructions that will get the computer to do what you want. This is the process of creating an **algorithm** -- a finite sequence of instructions that a computer can use to perform a task or calculate an output. When creating algorithms you have to work within the constraints of the computer. The biggest constraint is that the instructions a computer can execute are unambiguous and require no intelligence to perform.
 
