--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
@@ -94,7 +94,7 @@ A method call is an instruction that gets the computer to run the code in a [met
 ![A method calls runs a method, passing in values for the method to use](./images/method-call-concept.png "A method calls runs a method, passing in values for the method to use")
 <div class="caption">A method calls runs a method, passing in values for the method to use</div><br/>
 
-## Method Call - why, when, and how
+## Method Call -- when, why, and how
 
 As you have seen, [methods](../03-method) are building blocks that contain instructions that do a task -- sort of like mini-programs. A large part of your code will be calling methods to get them to do things you need done, in the order you need them done.
 
@@ -142,7 +142,7 @@ A method call consists of a method's name followed by an opening parenthesis, ze
 
 ### Basic Example
 
-The code in [Listing 5.6](#ListingMethodCalls) contains a C# program with four method calls. Each method call runs the `WriteLine` method to output text to the terminal.
+The code below contains a C# program with four method calls. Each method call runs the `WriteLine` method to output text to the terminal.
 
 The method call starts with the method's name that indicates the method to be called is `WriteLine`.
 Following the identifier is a list of values within parenthesis.
@@ -167,13 +167,9 @@ WriteLine(1);
 WriteLine(0);
 ```
 
-<div class="caption"><span class="caption-figure-nbr">Listing 5.6: </span>Method calls within a C# program</div>
-
 ### SplashKit Example
 
 The following code uses three different methods from the [SplashKit](https://splashkit.io) library. You can see the details for these on the [methods page](../02-method#examples), but the names should give you a good idea of what this does.
-
-<a id="ListingDrawShapes"></a>
 
 ```csharp
 using static SplashKitSDK.SplashKit;
@@ -185,15 +181,11 @@ Delay(5000);
 
 All of the arguments in this code are using literal values.
 
-<div class="caption"><span class="caption-figure-nbr">Listing 5.x: </span>Playing a sound effect</div>
-
 **TODO Add file to website and adjust url**
 
 ### Example using result
 
 Some methods return data, which you can use within any calculated value ([expression](../04-expression)) within your code. The following code demonstrates the use of the values returned by the `RandomColor` and `Rnd` methods.
-
-<a id="ListingReturn"></a>
 
 ```csharp
 using static SplashKitSDK.SplashKit;
@@ -203,8 +195,6 @@ ClearScreen(RandomColor());
 RefreshScreen();
 Delay(1000 * Rnd(10));
 ```
-
-<div class="caption"><span class="caption-figure-nbr">Listing 5.x: </span>Code demonstrating use of return values.</div>
 
 Line 4 demonstrates the use of the result from calling `RandomColor` within the call to `ClearScreen`. In this case, the value returned from the `RandomColor` method becomes the value for the argument passed to `ClearScreen`. As you would expect, this will clear the screen to a random color.
 
