--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/00-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/00-overview.mdx
@@ -4,10 +4,17 @@ title: Overview
 
 Sequence and data are core to every program. With these concepts we can perform calculations, and store and manipulate values.
 
-The concepts' section has provided you with program, variable, and constant building blocks and assignment and method call instructions. In this section, we explore the process of using these concepts to build a simple program.
+The concepts' section has provided you with [program](../../1-concepts/00-program), [variable](../../1-concepts/07-variable), and [constant](../../1-concepts/07-variable#constants) building blocks and [assignment](../../1-concepts/08-assignment-statement) and [method call](../../1-concepts/03-method-call) instructions. In this section, we will explore the process of using these concepts to build a simple program.
 
-In the [Change Calculator](../01-00-change-calculator) section, we examine the whole process of turning an idea into a small program. This will look at the design process. Starting with understanding the program and thinking through its steps, choosing the building blocks we need to represent this in the computer, designing the steps in the algorithm, writing the code, building and running the program, and testing our implementation.
+First, we will examine the whole process of turning an idea into a small program by building a [Change Calculator](../01-00-change-calculator). For this we will step through the entire design process, including:
 
-Following this, we quickly look programs for performing calculations, and calculating positions in a custom drawing. The [Airspeed Velocity](../03-airspeed-velocity) reads data from the user and calculates bird speed velocity from their wing size and frequency. In the [Water Bottle Visualiser](../04-water-bottle-visualizer), we create a program that will calculate and draw the height of water in a water bottle, based on its current capacity.
+1. Understanding the program and thinking through its steps.
+2. Choosing the building blocks we need to represent this in the computer.
+3. Designing the steps in the algorithm.
+4. Writing the code.
+5. Building and running the program.
+6. Testing our implementation.
 
-By the end of this you should have some tools to help you approach designing your own program.
+Following this, we quickly look at two more programs. The [Airspeed Velocity](../03-airspeed-velocity) program reads data from the user and calculates bird speed velocity from their wing size and frequency. In the [Water Bottle Visualiser](../04-water-bottle-visualizer), we create a program that will calculate and draw the height of water in a water bottle based on its current capacity.
+
+By the end of this you should have some tools to help you approach designing your own programs.
