--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-overview.mdx
@@ -1,6 +1,13 @@
 ---
 title: Overview of Sequence and Data
 ---
+import { YouTube } from 'astro-embed';
+
+In this video Andrew and Charlotte discuss and demonstrate the use of sequence and data by creating some test programs.
+
+<div class="not-content">
+  <YouTube id="YqHnPh8jgD8" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 At a basic level, programs are sequences of instructions that work on data.
 They can receive data as input, and produce data as output.
