--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
@@ -1,6 +1,7 @@
 ---
 title: Activities
 ---
+import { YouTube } from 'astro-embed';
 
 Having explored this leg of the journey you are now approaching a rest stop and a chance to practice and reflect.
 
@@ -11,6 +12,10 @@ The following activities describe a program that you can create using the concep
 As you work through this, you need to draw together several aspects important to programming. Focus on the **programming process and tools**, building your program in several iterations that involve you understanding, designing, implementing, and testing your program. Focus on **syntax** as you memorise the syntax for the different instructions, and pick up some methods you can use in the libraries we are using. Lastly, focus on the **programming concepts** associated with the instructions, building blocks, and terminology developed through this chapter. In particular, focus on the idea of sequence, the use of variable, constant, data types, and method call building blocks, and the terminology for expressions and literals.
 
 ### Unit Converter
+
+<div class="not-content">
+  <YouTube id="Ts6awRByJAU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Here we will be putting together everything we learnt across this chapter into something that might help us -- a unit converter!
 
@@ -32,6 +37,10 @@ Your program should:
 
 ### Sound Player
 
+<div class="not-content">
+  <YouTube id="yJFxHGRBisM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+
 Here we will be trying out some SplashKit functionality and playing a song (or part thereof) back to us!
 
 In this task, it is up to you to create a program which will ask the user where a sound file is located, the name of that sound file, as well as what timestamp the sound is to start playing, and for how long.
@@ -47,9 +56,13 @@ Your program should:
 
 ### Game Splash Screen
 
+<div class="not-content">
+  <YouTube id="M1q6L2Q9IlU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+
 Here we will be creating the beginning of any good game; a splash-screen/title animation!
 
-In this task, it is up to you to create a short sequence of SplashKit events, such as shapes, colours, and delays to act as an introduction or title animation to a game.
+In this task, it is up to you to create a short sequence of SplashKit events, such as shapes, colours, and delays acting as an introduction or title animation to a game.
 
 You might find it helpful to revisit the page on [drawing in SplashKit](./1-concepts/11-graphics#drawing-to-a-window) for this task.
 
