--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
@@ -7,9 +7,12 @@ Having explored this leg of the journey you are now approaching a rest stop and 
 
 ## Test Your Knowledge
 
-The following activities describe a program that you can create using the concepts we have learnt so far. Use these to validate that you have developed the knowledge and skills needed to create programs that involve sequence and data.
+The following activities describe a program that you can create using the concepts we have learned so far. Use these to validate that you have developed the knowledge and skills needed to create programs that involve sequence and data.
 
-As you work through this, you need to draw together several aspects important to programming. Focus on the **programming process and tools**, building your program in several iterations that involve you understanding, designing, implementing, and testing your program. Focus on **syntax** as you memorise the syntax for the different instructions, and pick up some methods you can use in the libraries we are using. Lastly, focus on the **programming concepts** associated with the instructions, building blocks, and terminology developed through this chapter. In particular, focus on the idea of sequence, the use of variable, constant, data types, and method call building blocks, and the terminology for expressions and literals.
+As you work through the activities, focus on the **programming process and tools**.
+Build your program in several iterations of: understand what you need, design the logic, implement the code, and test that it works.
+Focus on **syntax** for the different instructions, and pick up some methods you can use in the libraries we are using.
+Notice which **programming concepts** you are using, and think about how it relates to the building blocks and terminology we introduced through this chapter. In particular, focus on the idea of sequence, the use of building blocks such as variables, constants, data types, and method calls, and the terminology for expressions and literal values.
 
 ### Unit Converter
 
@@ -17,23 +20,23 @@ As you work through this, you need to draw together several aspects important to
   <YouTube id="Ts6awRByJAU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
-Here we will be putting together everything we learnt across this chapter into something that might help us -- a unit converter!
+Here we will be putting together everything we learned across this chapter into something that might help us -- a unit converter!
 
-In this task, it is up to you to create a program that takes in a number of millimeters, and converts them into metric units such as centimeters, meters, and kilometers, as well as imperial units such as inches, feet, and miles.
+In this task, it is up to you to create a program that takes in a number of millimeters and converts them into metric units such as centimeters, meters, and kilometers, as well as imperial units such as inches, feet, and miles.
 
-For your reference:
+For your reference, there are:
 
-- There are 10 millimeters in a centimeter.
-- There are 100 centimeters in a meter.
-- There are 1000 meters in a kilometer.
-- There are 25.4 millimeters in an inch.
-- There are 12 inches in a foot.
-- There are 5280 feet in a mile.
+- 10 millimeters in a centimeter.
+- 100 centimeters in a meter.
+- 1000 meters in a kilometer.
+- 25.4 millimeters in an inch.
+- 12 inches in a foot.
+- 5280 feet in a mile.
 
 Your program should:
 
 - Ask the user how many millimeters they would like to convert.
-- Return the resultant conversions for both metric and imperial units, from the largest to the smallest denomination.
+- Print out the resultant conversions for both metric and imperial units.
 
 ### Sound Player
 
@@ -43,16 +46,16 @@ Your program should:
 
 Here we will be trying out some SplashKit functionality and playing a song (or part thereof) back to us!
 
-In this task, it is up to you to create a program which will ask the user where a sound file is located, the name of that sound file, as well as what timestamp the sound is to start playing, and for how long.
-
+In this task, it is up to you to create a program which plays part of an audio file for us.
 You might find it helpful to revisit the page on [playing music in SplashKit](./1-concepts/11-graphics#playing-music) for this task.
 
 Your program should:
 
-- Ask the user the file path of the folder the song is located in (e.g: C:/Users/Desktop/Songs/).
-- Ask the user the file name of the song.
-- Ask the user how long they would like the song to play for in seconds.
-- Play the section of the song the user asked for.
+- Ask the user for the path to a song file.
+- Ask the user for a name for the song.
+- Ask the user how long they would like the song to play for (in seconds).
+- Play the song for specified amount of time at 50% volume.
+- Play the song for specified amount of time at 100% volume.
 
 ### Game Splash Screen
 
@@ -60,10 +63,9 @@ Your program should:
   <YouTube id="M1q6L2Q9IlU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
-Here we will be creating the beginning of any good game; a splash-screen/title animation!
+Here we will be creating the beginning of any good game: a splash-screen/title animation!
 
-In this task, it is up to you to create a short sequence of SplashKit events, such as shapes, colours, and delays acting as an introduction or title animation to a game.
-
+In this task, it is up to you to create a short sequence of SplashKit events, such as shapes, colours, and delays, to act as an introduction or title animation to a game.
 You might find it helpful to revisit the page on [drawing in SplashKit](./1-concepts/11-graphics#drawing-to-a-window) for this task.
 
 Your program should:
