--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/03-method-call.mdx
@@ -170,14 +170,12 @@ The following code uses three different methods from the [SplashKit](https://spl
 ```csharp
 using static SplashKitSDK.SplashKit;
 
-DownloadSoundEffect("hello", "https://programmers.guide/hello.ogg", 443);
+DownloadSoundEffect("hello", "https://programmers.guide/resources/code-examples/part-0/hello-world-snippet-saddle-club.ogg", 443);
 PlaySoundEffect("hello");
 Delay(5000);
 ```
 
 All of the arguments in this code are using literal values.
-
-**TODO Add file to website and adjust url**
 
 ### Example using result
 
