Update coding hints in sequence and data

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-01-understanding-the-change-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-01-understanding-the-change-calculator.mdx
@@ -74,7 +74,8 @@ Calculate the amount of change needed
 
 Give change
     Give $2 coins
-        Calculate the number of $2 coins to give (amount of change needed / 200)
+        Calculate the number of $2 coins to give 
+            (to give = amount of change needed / 200)
         Update the amount of change remaining to give
         Output the number of $2
 
