--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-04-creating-the-code.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-04-creating-the-code.mdx
@@ -47,6 +47,11 @@ I'd suggest the following process:
 Code is easy to make mistakes with, so build a little and test how it is going. Do not write this all at once. That usually results in it taking longer.
 :::
 
+:::tip[Need help with the syntax?]
+
+Memorising the syntax of a programming language is an important step as you start coding. If you don't feel confident with the syntax yet, remember you can go back and check the syntax and examples in the concepts section.
+:::
+
 ## Compiling and Running
 
 As you build small parts of the code, you need to compile and run the program to test how it is coming along.
