--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/4-activities.mdx
@@ -22,7 +22,7 @@ Notice which **programming concepts** you are using, and think about how it rela
 
 Here we will be putting together everything we learned across this chapter into something that might help us -- a unit converter!
 
-In this task, it is up to you to create a program that takes in a number of millimeters and converts them into metric units such as centimeters, meters, and kilometers, as well as imperial units such as inches, feet, and miles.
+In this task, it is up to you to create a program that takes in a number of millimeters and converts them into the metric units for centimeters, meters, and kilometers, as well as imperial units for inches, feet, and miles.
 
 For your reference, there are:
 
@@ -65,7 +65,7 @@ Your program should:
 
 Here we will be creating the beginning of any good game: a splash-screen/title animation!
 
-In this task, it is up to you to create a short sequence of SplashKit events, such as shapes, colours, and delays, to act as an introduction or title animation to a game.
+In this task, it is up to you to create a short sequence of SplashKit method calls (drawing shapes, colours, images, and delays) to act as an introduction or title animation to a game.
 You might find it helpful to revisit the page on [drawing in SplashKit](../1-concepts/11-graphics#drawing-to-a-window) for this task.
 
 Your program should:
