Update the change calculator to better capture what is needed

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-01-understanding-the-change-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-01-understanding-the-change-calculator.mdx
@@ -4,107 +4,38 @@ sidebar:
   label: " - Understanding the Calculator"
 ---
 
+:::note
+Your goal in this stage is to understand what you are aiming to build with sufficient detail to be able to think through the steps a computer would need to undertake to achieve a desired result.
+:::
+
 You have most likely purchased something in cash and calculated the change you should receive at some point in your life. For example, if you were receiving $6.50 in coins you probably just know that ideally it should be given to you as three $2 coins and one 50c coin. While the task of calculating change is relatively simple, it does not mean that you can skip thinking about it. What you need to now is think through the steps that you perform intuitively.
 
-:::tip
-Put yourself in the place of the computer. You (as the computer) need to calculate and output these change values. Remember the computer is **unintelligent**. You cannot rely upon your knowledge, or remember anything that is not stored in a variable or constant. Try to think about the information you are using and the steps you are performing to make sure you can capture what needs to be done in your code.
+## Thinking about inputs and outputs
 
-This is another example of **computational thinking**. It is all about breaking ideas down into the small steps that the computer can perform. Outside of programming, these skills will help you become better at planning and thinking through tasks in a methodical manner.
-:::
+One good first step in understanding what a program needs to do is to think through the inputs and outputs.
+For our change calculator these will be:
 
-Think about the process of calculating change. First you need to determine the amount of change that needs to be given. Then you need to determine how many of each kind of coin you are going to give.
+* **Input:** the cost of the item purchased and the amount paid. Entered by the user at the terminal.
+* **Output:** the number of each type of coin to give as change.
 
-The main steps will need to be:
+We could imagine that running the completed program should look something like this:
 
-1. Determine how much change to give.
-    * Get the cost.
-    * Get the amount paid.
-    * Calculate the amount of change to provide.
-2. Give change.
+```bash
+$ dotnet run
+Cost of item (in cents): 15
+Amount paid (in cents): 500
+Change: 2 x $2, 0 x $1, 1 x 50c, 1 x 20c, 1 x 10c, 1 x 5c
 
-Getting the cost and the amount paid can be done by asking the user.
-Then, calculating the amount of change needed is a simple expression.
-The tricky part is step two, so we need to break down "give change" into individual steps.
+$ dotnet run
+Cost of item (in cents): 150
+Amount paid (in cents): 250
+Change: 0 x $2, 1 x $1, 0 x 50c, 0 x 20c, 0 x 10c, 0 x 5c
 
-The secret is to realise that we need to start with the coin with the largest value, and then work down from there. By starting with the largest value, we make sure that we remove the largest amount from the change value each time. Using this approach with the $6.50 example, we remove 3 x $2 first, leaving 50c remaining. If we had started with 5c first, we would have given 130 5c coins!
-
-The number of coins to give out can be calculated by dividing the amount of change to be given by the value of the current coin. Then, reduce the amount of change that remains to be given.
-
-So, the steps to give change will be:
-
-* Give $2 coins:
-  * Calculate the number of $2 coins to give.
-  * Update the amount of change remaining to give.
-  * Output the number of $2 coins to give.
-* Give $1 coins:
-  * Calculate the number of $1 coins to give.
-  * Update the amount of change remaining to give.
-  * Output the number of $1 to give.
-* Give 50c coins:
-  * Calculate the number of 50c coins to give.
-  * Update the amount of change remaining to give.
-  * Output the number of 50c to give.
-* Give 20c coins:
-  * Calculate the number of 20c coins to give.
-  * Update the amount of change remaining to give.
-  * Output the number of 20c to give.
-* Give 10c coins:
-  * Calculate the number of 10c coins to give.
-  * Update the amount of change remaining to give.
-  * Output the number of 10c to give.
-* Give 5c coins:
-  * Calculate the number of 5c coins to give.
-  * Update the amount of change remaining to give.
-  * Output the number of 5c to give.
-
-This gives us a start on the pseudocode for the change calculator.
-To keep things simple, we will keep all of our calculations in cents.
-
-:::caution[Integer Division]
-Remember that [when you do division between two integers, you get an integer](../../../1-sequence-and-data/1-concepts/06-type#example). So 650 / 200 is 3.
-This "trick" is what makes our change calculator work.
-:::
-
-```txt
-Get the details from the user
-    Get the cost
-    Get the amount paid
-
-Calculate the amount of change needed
-
-Give change
-    Give $2 coins
-        Calculate the number of $2 coins to give 
-            (to give = amount of change needed / 200)
-        Update the amount of change remaining to give
-        Output the number of $2
-
-    Give $1 coins
-        Calculate the number of $1 coins to give (amount of change needed / 100)
-        Update the amount of change remaining to give
-        Output the number of $1
-
-    Give 50c coins
-        Calculate the number of 50c coins to give (amount of change needed / 50)
-        Update the amount of change remaining to give
-        Output the number of 50c
-
-    Give 20c coins
-        Calculate the number of 20c coins to give (amount of change needed / 20)
-        Update the amount of change remaining to give
-        Output the number of 20c
-
-    Give 10c coins
-        Calculate the number of 10c coins to give (amount of change needed / 10)
-        Update the amount of change remaining to give
-        Output the number of 10c
-
-    Give 5c coins
-        Calculate the number of 5c coins to give (amount of change needed / 5)
-        Update the amount of change remaining to give
-        Output the number of 5c
+$ dotnet run
+Cost of item (in cents): 175 
+Amount paid (in cents): 200
+Change: 0 x $2, 0 x $1, 0 x 50c, 1 x 20c, 0 x 10c, 1 x 5c
 ```
 
-:::tip[Detail is key]
-Notice the steps are small and require no interpretation. You are on the right track when you can list the instructions in this kind of detail.
-:::
+This is a good start, as we now have a clear understanding of our initial data, and the end goal of our program.
+However, we still need to think through how we get from one to the other.
