--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-03-choosing-artefacts.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-03-choosing-artefacts.mdx
@@ -4,6 +4,10 @@ sidebar:
   label: " - Choosing Building Blocks"
 ---
 
+:::note
+Your goal in this stage is to think about the building blocks (variables, constants, methods, etc) that you will create and use.
+:::
+
 Now that we understand the goal of our program, know its inputs and outputs, and have figured out the steps it needs to follow, we need to think about the *things* that we will need to go alongside the instructions.
 
 ## Identifying values
@@ -86,7 +90,7 @@ Use the `Write` method to output text to the Terminal without adding a new line 
 
 ## New Pseudocode
 
-Our ideas can be captured in text as follows.
+Our ideas can be captured in pseudocode as follows. This helps clearly show the different things we need to create in the code, and provides more details on how we will use these to achieve the final results.
 
 ```txt
 Constants:
