--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-05-testing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-05-testing.mdx
@@ -4,6 +4,10 @@ sidebar:
   label: " - Testing the Code"
 ---
 
+:::note
+Your goal in this step is to check your program works, and try to find any issues that may exist. Initially you will start by checking that it works as you expect, but as you grow in capability you can start to try to actively break it to see how it handles different inputs. Many security issues are the result of not thinking through the different inputs people can provide that are not expected, and lead to undesirable outcomes.
+:::
+
 Now that our program is making greater use of data it becomes more important to think about how to test your program. Testing is the process of trying to locate issues within your code. There are two main
 classifications for issues, **syntactic errors** and **semantic errors** (also known as logic errors).
 
