--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-00-change-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-00-change-calculator.mdx
@@ -10,39 +10,29 @@ For this exercise we want to build a terminal program to calculate and output th
 
 To design and implement this program we need to follow a number of steps:
 
-1. Understand the problem, and get some ideas on the tasks that need to be performed.
-2. Choose the building blocks we will create and use.
-3. Design the steps needed to achieve our goals.
-4. Map these steps to building blocks and instructions in code.
-5. Compile and run the program.
-6. Test the program.
+1. Understand the problem, and the steps the computer needs to perform.
+2. Choose the building blocks we will create and use, and design the steps needed to achieve our goals.
+3. Map these steps to building blocks and instructions to code.
+4. Compile, run, and test the program.
 
 Let's start by understanding what the program needs to do. This will involve determining the tasks to be performed, the steps involved in those tasks, and any data associated with them. Only then can you start building a solution.
 
-One good first step in understanding what a program needs to do is to make sure we have clear inputs and outputs.
-For our change calculator these will be defined as:
+## Understand the problem
 
-* **Input:** the cost of the item purchased and the amount paid. Entered by the user at the terminal.
-* **Output:** the number of each type of coin to give as change.
+To build a program we need to code the sequence of instructions that will get the computer to perform the actions we want. As the computer is unintelligent, this requires us to fully understand the problem and the steps needed to achieve the required outcomes. This makes it really important to start by understanding what you want the program to do.
 
-Based on these, running the completed program might look something like this:
+In this first step, your goal is to understand the task as fully as possible. As you think through this you need to keep in mind what the computer can do, and try to think about this in terms of the steps we will need the computer to perform.
 
-```bash
-$ dotnet run
-Cost of item (in cents): 15
-Amount paid (in cents): 500
-Change: 2 x $2, 0 x $1, 1 x 50c, 1 x 20c, 1 x 10c, 1 x 5c
+## Choose building blocks
 
-$ dotnet run
-Cost of item (in cents): 150
-Amount paid (in cents): 250
-Change: 0 x $2, 1 x $1, 0 x 50c, 0 x 20c, 0 x 10c, 0 x 5c
+Once you know what you want to build, the next step involves working out how you will put together the different programming concepts so that you can get the computer to achieve the tasks you need. At the end of this, you should have a structure in mind and a plan for how the program will come together.
 
-$ dotnet run
-Cost of item (in cents): 175 
-Amount paid (in cents): 200
-Change: 0 x $2, 0 x $1, 0 x 50c, 1 x 20c, 0 x 10c, 1 x 5c
-```
+## Writing the code
 
-This is a good start, as we now have a clear understanding of our initial data, and the end goal of our program.
-However, we still need to think through how we get from one to the other.
+At this point you should have a good idea for how the program will work, and you now need to convert those ideas to code. This is where you can use the syntax and examples covered in the concepts' section to work out how to capture your ideas in code.
+
+## Testing your program
+
+Once you have the code written, you need to test that it actually achieves the results you aim for. At this step you compile, and run your program, and try different inputs to see how it behaves. Really testing your program will involve checking it does what you expect, but also checking that it behaves when you do unexpected things with the input.
+
+Let's go through these steps now with the change calculator in mind.
