--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-04-creating-the-code.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-04-creating-the-code.mdx
@@ -1,8 +1,12 @@
 ---
-title: Creating the Code
+title: Writing the Code
 sidebar:
-  label: " - Creating the Code"
+  label: " - Writing the Code"
 ---
+
+:::note
+Your goal in this stage is to convert your ideas (in this case the pseudocode we have provided) into C# code. This is the coding side of programming.
+:::
 
 The pseudocode shows the instructions we need to get this program working. At this stage these instructions need to be translated into source code, so that they can be compiled and the resulting program tested.
 
@@ -24,7 +28,7 @@ The next chapter, [Communicating Syntax](../../../2-communicating-syntax/0-overv
 Remember the steps to get going with a new program:
 
 1. Open the terminal
-2. `cd` to your **projects** folder
+2. `cd` to your **code** folder (or whereever you store your projects)
 3. `mkdir` a folder for your new project -- perhaps **ChangeCalculator** in this case
 4. `cd` to your new folder
 5. Run `dotnet new console`
@@ -51,6 +55,93 @@ Code is easy to make mistakes with, so build a little and test how it is going. 
 
 Memorising the syntax of a programming language is an important step as you start coding. If you don't feel confident with the syntax yet, remember you can go back and check the syntax and examples in the concepts section.
 :::
+
+### Creating the program
+
+To start we need to create the program. There is nothing particular special we need to do in C# at this stage, however we do need access to methods in the Console and Convert class.
+
+This will give us something like this as a start:
+
+```cs
+// We need System.Console to use WriteLine and ReadLine
+using static System.Console;
+// We need System.Convert to convert input into numbers
+using static System.Convert;
+```
+
+### Creating constants
+
+The next things in our pseudocode are the constants. You can check the syntax details on the [constants](../../1-concepts/07-variable) page, and start coding the `TWO_DOLLAR` constant as shown below. 
+
+```cs
+// We need System.Console to use WriteLine and ReadLine
+using static System.Console;
+// We need System.Convert to convert input into numbers
+using static System.Convert;
+
+// Constants for the coin values
+const int TWO_DOLLARS = 200;
+```
+
+:::tip
+C# coding convention uses UPPER_CASE for constant names.
+:::
+
+### Variables
+
+The next things in our pseudocode are the variables that we will need. We can code these up in much the same way as we did with the constants.
+
+```cs
+// We need System.Console to use WriteLine and ReadLine
+using static System.Console;
+// We need System.Convert to convert input into numbers
+using static System.Convert;
+
+// Constants for the coin values
+const int TWO_DOLLARS = 200;
+//... the others here
+
+int costOfItem;
+```
+
+:::tip
+C# coding convention uses camelCase for variable names.
+:::
+
+### Method calls
+
+The next steps require us to think a little, as our pseudocode will need a few steps. The first part is to "Get the data from the user". This involves the step "Get the cost (store in costOfItem)".
+
+*How can we achieve this?*
+
+We are going to be interacting with the user in the Terminal. They will need to be told that they need to enter the cost of the item when we get to this step. To achieve this we can call the `Write` or `WriteLine` method. These will be our go-to methods for prompting the user for action or providing them with output when we write a terminal based program.
+
+Once the user knows what to enter, they will be able to provide us with these details. To access these, we can use the `ReadLine` method. This will be our go-to method for reading input from the user in the Terminal. In this case, we will also need to convert this to an integer. We can use Convert's `ToInt32` method for this.
+
+Once we have converted the data to an integer, we can store it in the `costOfItem` variable using an [assignment statement](../../1-concepts/08-assignment-statement).
+
+The code of this is shown below.
+
+```cs
+// We need System.Console to use WriteLine and ReadLine
+using static System.Console;
+// We need System.Convert to convert input into numbers
+using static System.Convert;
+
+// Constants for the coin values
+const int TWO_DOLLARS = 200;
+//... the others here
+
+int costOfItem;
+//... the others here
+
+// Get the data from the user
+Write("Cost of item in cents: ");
+costOfItem = ToInt32(ReadLine());
+
+```
+
+You can now keep going through the steps in the pseudocode to convert the idea for this program into instructions the computer can run. Our version of the code is in the [wrap up section](../../5-wrap-up/1-change) at the end of the chapter. Try not to look, but if you get stuck you can check so that you can keep progressing. When you do need to check, take notes and go back to study that concept or code. This will help you fill in any gaps in your understanding.
 
 ## Compiling and Running
 
@@ -124,8 +215,8 @@ Here are some handy hints related to dealing with compiler errors.
     error message means ask others developers or search for the message
     on the internet.
 
-8. **Find the line and character number of
-    the error**. One important detail in the error message will be the
+8. **Find the line and character number of the error**.
+    One important detail in the error message will be the
     line number of the error. This gives you a starting point to help
     you locate the problem. It is important to note that this is where
     the compiler got to when it noticed the error - this *does not* mean
@@ -133,7 +224,7 @@ Here are some handy hints related to dealing with compiler errors.
     looking). You may need to look back one or more lines to find the
     actual source of the problem.
 
-9. **Watch for typos**. It is easy to mistype an identifier. When this
+9.  **Watch for typos**. It is easy to mistype an identifier. When this
     happens the compiler will not know what to do (and it will complain
     about you trying to use 'unknown' things). Make sure you check for
     these tiny typos when you get errors related to the compiler not
