Fix typo in assignment statement

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-concepts/08-assignment-statement.mdx
@@ -379,7 +379,7 @@ WriteLine($"After count += 5...count is now {count}");
 // v v
 count++;
 
-WriteLine($"After count += 5...count is now {count}");
+WriteLine($"After count++ ...count is now {count}");
 ```
 
 If you ran the above code and entered **17** as the start count you should get this output:
