Update change calculator terminal output snippet to make it clearer that it is not code.

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-01-understanding-the-change-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-put-together/01-01-understanding-the-change-calculator.mdx
@@ -20,7 +20,7 @@ For our change calculator these will be:
 
 We could imagine that running the completed program should look something like this:
 
-```bash
+```bash title="Terminal output example (not code)"
 $ dotnet run
 Cost of item (in cents): 15
 Amount paid (in cents): 500
