--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-overview.mdx
@@ -17,12 +17,12 @@ Building blocks describe something that can be **created and used** within code.
 Think of them as the template for the *things* you can build in a program.
 This chapter examines the following building blocks:
 
-- [Program](1-concepts/00-program): a sequence of instructions that when compiled creates an executable file that a user can run.
-- [Method](1-concepts/02-method): a named group of instructions in a program that will get the computer to perform a task. When you want the task performed you can call the method.
-- [Variable](1-concepts/07-variable): allows you to **store** and **retrieve** values within a program.
-- [Constant](1-concepts/07-variable#constants): similar to a variable, except that its value cannot change after it is stored.
-- [Library](1-concepts/10-library): a collection of reusable code that can be used in programs.
-- [Type](1-concepts/06-type): defines how data is interpreted by a program. A programming language will support a number of basic types by default, and libraries can add other types.
+- [Program](../1-concepts/00-program): a sequence of instructions that when compiled creates an executable file that a user can run.
+- [Method](../1-concepts/02-method): a named group of instructions in a program that will get the computer to perform a task. When you want the task performed you can call the method.
+- [Variable](../1-concepts/07-variable): allows you to **store** and **retrieve** values within a program.
+- [Constant](../1-concepts/07-variable#constants): similar to a variable, except that its value cannot change after it is stored.
+- [Library](../1-concepts/10-library): a collection of reusable code that can be used in programs.
+- [Type](../1-concepts/06-type): defines how data is interpreted by a program. A programming language will support a number of basic types by default, and libraries can add other types.
 
 :::tip[Overwhelmed?]
 When you start learning programming you encounter a lot of new terms.
@@ -35,8 +35,8 @@ Building blocks are created and used in programs, but on their own they don't *d
 For that we need **instructions**.
 This chapter introduces two instructions you can use in your code to get the computer to do something:
 
-- [Method Call](1-concepts/03-method-call): tells the computer to execute the instructions in a method.
-- [Assignment Statement](1-concepts/08-assignment-statement): tells the computer to store a value in a variable or constant.
+- [Method Call](../1-concepts/03-method-call): tells the computer to execute the instructions in a method.
+- [Assignment Statement](../1-concepts/08-assignment-statement): tells the computer to store a value in a variable or constant.
 
 :::tip[Thinking for the computer]
 The instructions in your code tell the computer what to do.
@@ -46,7 +46,7 @@ As you learn about an instruction, think about what it does, when to use it, and
 This is the core of **computational thinking** -- the ability to take an idea and work out how to turn it into a functioning digital reality.
 :::
 
-To demonstrate these concepts in action, we will [put them together](./2-put-together/00-overview) to create two different programs: one that calculates airspeed and another that creates a drawing using [SplashKit](https://splashkit.io). The airspeed calculator lets you calculate the [airspeed velocity of unladen birds](https://www.youtube.com/watch?v=uio1J2PKzLI&ab_channel=6o18948oo3312612oo), as shown below.
+To demonstrate these concepts in action, we will [put them together](../2-put-together/00-overview) to create two different programs: one that calculates airspeed and another that creates a drawing using [SplashKit](https://splashkit.io). The airspeed calculator lets you calculate the [airspeed velocity of unladen birds](https://www.youtube.com/watch?v=uio1J2PKzLI&ab_channel=6o18948oo3312612oo), as shown below.
 
 ```sh
 $ dotnet run
